[package]
name = "gitai"
version = "0.1.0"
authors = ["Your Name <your@email.com>"]
edition = "2021"

[dependencies]
clap = { version = "3.0", features = ["derive"] }
git2 = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1.0", features = ["full"] }